--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,8 +1,31 @@
-header.light {
-    background: lightgray;
+* {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-header.dark {
-    background: black;
-    color: white;
+h1 {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
+
+header {
+   text-align: center;
+   margin-bottom: 25px;
+   border: 1px solid gray;
+   padding-bottom: 10px;
+
+}
+
+header a {
+    text-decoration: none;
+    padding: 10px;
+}
+
+nav {
+    margin-bottom: 5px;
+}
+
+nav a {
+    padding: 5px;
+}
+
+
