--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,7 @@
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
 h1 {
